--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.31.3",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
